--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -49,10 +49,16 @@ jobs:
 
       - name: Populate the release description with RELEASENOTES.md
         run: |
+          CURRENT_TAG=$(gh api repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }} \
+          -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          -X GET \
+          --jq '.tag_name')
           gh api repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }} \
           -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           -X PATCH \
+          -F tag_name=$CURRENT_TAG \
           -F body="$(cat RELEASENOTES.md)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
