combine check and create step for new release and milestone

--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -40,29 +40,19 @@ jobs:
           -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           -X GET \
-          --jq ''.[] | .name')
+          --jq '.[] | .name')
           if [[ $RELEASES =~ ${{ env.NEW_RELEASE_VERSION }} ]]
           then
-            EXISTS='true'
+            echo "Release exists"
           else
-            EXISTS='false'
+            gh api repos/${{ github.repository }}/releases \
+            -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -X POST \
+            -F name=${{ env.NEW_RELEASE_VERSION }} \
+            -F tag_name=${{ env.NEW_RELEASE_VERSION }} \
+            -F draft=true 
           fi
-          echo "RELEASE_EXISTS="$EXISTS >> $GITHUB_ENV
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            
-
-      - name: Create a new release
-        run: |
-          gh api repos/${{ github.repository }}/releases \
-          -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          -X POST \
-          -F name=${{ env.NEW_RELEASE_VERSION }} \
-          -F tag_name=${{ env.NEW_RELEASE_VERSION }} \
-          -F draft=true 
-
-        if: !(${{ env.RELEASE_EXISTS }})
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -72,26 +62,17 @@ jobs:
           -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           -X GET \
-          --jq ''.[] | .title')
+          --jq '.[] | .title')
           if [[ $MILESTONES =~ ${{ env.NEW_RELEASE_VERSION }} ]]
           then
-            EXISTS='true'
+            echo "Milestone exists"
           else
-            EXISTS='false'
+            gh api repos/${{ github.repository }}/milestones \
+            -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -X POST \
+            -F title=${{ env.NEW_RELEASE_VERSION }} 
           fi
-          echo "MILESTONE_EXISTS="$EXISTS >> $GITHUB_ENV
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-      - name: Create a new milestone.
-        run: |
-          gh api repos/${{ github.repository }}/milestones \
-          -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          -X POST \
-          -F title=${{ env.NEW_RELEASE_VERSION }} 
-        if: !(${{ env.MILESTONE_EXISTS }})
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
