--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -95,6 +95,6 @@ jobs:
         with:
           branch: "${{ env.NEW_RELEASE_VERSION }}-init"
           commit-message: "update files for ${{ env.NEW_RELEASE_VERSION }}"
-          title: "Initialize ${{ env.NEW_RELEAES_VERISION }}"
+          title: "Initialize ${{ env.NEW_RELEASE_VERISION }}"
           body: "This is an automated PR that updates the version and add release note for the new in-develpoment version of the software."
           reviewers: yardasol
