--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -76,26 +76,40 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Update version.py
+      - name: Initial changes for the new version
         run: |
+          echo "Update version.py"
           sed -i "s/_version_micro = '*[0-9]*'*/_version_micro = ''/g" saltproc/version.py
           sed -i "s/_version_minor = [0-9]*/_version_minor = ${{ env.MINOR_VERSION }}/g" saltproc/version.py
           sed -i "s/^# _version_extra = 'dev'/_version_extra = 'dev'/g" saltproc/version.py
           sed -i "s/^_version_extra = '0'/# _version_extra = '0'/g" saltproc/version.py
-
-      - name: Create new release notes
-        run: |
-          sed -i "s/\.\. note:: These release notes are currently in production\.//g" doc/releasenotes/${{ env.RELEASE_VERSION }}.rst
+          echo "Create new release notes"
           cp doc/releasenotes/template.rst doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           sed -i "s/vx.x.x/${{ env.NEW_RELEASE_VERSION }}/g" doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
           sed -i "s/${{ env.RELEASE_VERSION }}/${{ env.NEW_RELEASE_VERSION }}\n  ${{ env.RELEASE_VERSION }}/g" doc/releasenotes/index.rst
 
-      - name: Create PR for changes
+      - name: Create PR for inital new version changes
         uses: peter-evans/create-pull-request@v3
         with:
           branch: "${{ env.NEW_RELEASE_VERSION }}-init"
           delete-branch: true
-          commit-message: "update files for ${{ env.NEW_RELEASE_VERSION }}"
+          commit-message: "initialize files for ${{ env.NEW_RELEASE_VERSION }}"
           title: "Initialize ${{ env.NEW_RELEASE_VERISION }}"
           body: "This is an automated PR that updates the version and add release note for the new in-develpoment version of the software."
+          reviewers: yardasol
+
+      - name: Advance changes for publishing the new release
+        run: |
+          sed -i "s/\.\. note:: These release notes are currently in production\.//g" doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
+          sed -i "s/^_version_extra = 'dev'/# _version_extra = 'dev'/g" saltproc/version.py
+          sed -i "s/# _version_extra = '0'/_version_extra = '0'/g" saltproc/version.py
+
+      - name: Create advance PR final new version changes
+        uses: peter-evans/create-pull-request@v3
+        with:
+          branch: "${{ env.NEW_RELEASE_VERSION }}-final"
+          delete-branch: true
+          commit-message: "update version.py and the release notes before publishing ${{ env.NEW_RELEASE_VERSION }}"
+          title: "Finalize ${{ env.NEW_RELEASE_VERISION }}"
+          body: "MERGE BEFORE PUBLISHING ${{ env.NEW_RELEASE_VERSION }}.\n This is an automated PR that updates version for the full release of the in-develpoment version of the software."
           reviewers: yardasol
