--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -92,6 +92,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           branch: "${{ env.NEW_RELEASE_VERSION }}-init"
+          base: "master"
           delete-branch: true
           commit-message: "initialize files for ${{ env.NEW_RELEASE_VERSION }}"
           title: "Initialize ${{ env.NEW_RELEASE_VERSION }}"
@@ -108,6 +109,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           branch: "${{ env.NEW_RELEASE_VERSION }}-final"
+          base: "master"
           delete-branch: true
           commit-message: "update version.py and the release notes before publishing ${{ env.NEW_RELEASE_VERSION }}"
           title: "Finalize ${{ env.NEW_RELEASE_VERSION }}"
