--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -73,6 +73,7 @@ jobs:
             -X POST \
             -F title=${{ env.NEW_RELEASE_VERSION }} 
           fi
+          
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -108,6 +109,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           branch: "${{ env.NEW_RELEASE_VERSION }}-final"
+          base: master
           delete-branch: true
           commit-message: "update version.py and the release notes before publishing ${{ env.NEW_RELEASE_VERSION }}"
           title: "Finalize ${{ env.NEW_RELEASE_VERSION }}"
