--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -77,6 +77,27 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: "Get milestone number for ${{ env.NEW_RELEASE_VERSION }}"
+        run: |
+          mapfile -t MILESTONE_NAMES < <(gh api repos/${{ github.repository }}/milestones \
+          -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          -X GET \
+          --jq '.[] | .title')
+          mapfile -t MILESTONE_NUMBERS < <(gh api repos/${{ github.repository }}/milestones \
+          -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          -X GET \
+          --jq '.[] | .number')
+          for i in ${MILESTONE_NAMES[@]}
+          do
+            if [[ ${MILESTONE_NAMES[$i]} == ${{ env.NEW_RELEASE_VERSION }} ]]
+            then
+              INDEX=$i
+            fi
+          done
+          echo "MILESTONE_NUMBER="${MILESTONE_NUMBERS[$INDEX]} >> $GITHUB_ENV
+
       - name: "Make initial changes for ${{ env.NEW_RELEASE_VERISON }}"
         run: |
           echo "Update version.py"
@@ -98,6 +119,7 @@ jobs:
           title: "[INIT] Update `version.py` and create release notes for version ${{ env.NEW_RELEASE_VERSION }}"
           body: "This is an automated PR that updates the version number and creates the release notes file for version ${{ env.NEW_RELEASE_VERSION }}. This should be the first PR merged during development of version ${{ env.NEW_RELEASE_VERSION }}"
           reviewers: yardasol
+          milestone: env.MILESTONE_NUMBER
           labels: |
             Priority:1-Critical
             Status:5-In Review
@@ -122,6 +144,7 @@ jobs:
           title: "[REQUIRED FOR PUBLISHING] Finishing touches for version ${{ env.NEW_RELEASE_VERSION }}"
           body: "This is an automated PR that updates the version number and release notes in preparation for the full release of version ${{ env.NEW_RELEASE_VERSION }}. This should be last PR merged before publishing version ${{ env.NEW_RELEASE_VERSION }}. Merging this PR is a prequisite of publishing version ${{ env.NEW_RELEASE_VERSION }}"
           reviewers: yardasol
+          milestone: env.MILESTONE_NUMBER
           labels: |
             Priority:2-Normal
             Status:1-New
