--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -9,6 +9,11 @@ on:
 
 jobs:
   get-environment-variables:
+    outputs:
+      release-version: ${{ steps.release-version-step.outputs.release-version }}
+      new-release-version: ${{ steps.other-versions-step.outputs.new-release-version }}
+      minor-version: ${{ steps.other-versions-step.outputs.minor-version }}
+      milestone-number: ${{ steps.milestone-number-step.outputs.milestone-number }}
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -16,12 +21,15 @@ jobs:
 
     steps:
       - name: Get most recent release version
+        id: release-version-step
         run: |
           echo "RELEASE_VERSION=$(gh api repos/${{ github.repository }}/tags --jq '.[0] | .name')" >> $GITHUB_ENV
+          echo "::set-output name=release-version::${{ env.RELEASE_VERSION }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Increment minor version
+        id: other-versions-step
         run: |
           IFS='.' read -ra arr <<< ${{ env.RELEASE_VERSION }}
           MINOR_VERSION=$((${arr[1]}+1))
@@ -29,6 +37,9 @@ jobs:
           NEW_RELEASE_VERSION="${arr[0]}.${arr[1]}.${arr[2]}"
           echo "MINOR_VERSION="$MINOR_VERSION >> $GITHUB_ENV
           echo "NEW_RELEASE_VERSION="$NEW_RELEASE_VERSION >> $GITHUB_ENV
+          echo "::set-output name=minor-version::${{ env.MINOR_VERSION }}"
+          echo "::set-output name=new-release-version::${{ env.NEW_RELEASE_VERSION }}"
+
 
       - name: "Check for existing ${{ env.NEW_RELEASE_VERSION }} draft release"
         run: |
@@ -73,6 +84,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Get milestone number for ${{ env.NEW_RELEASE_VERSION }}"
+        id: milestone-number-step
         run: |
           mapfile -t MILESTONE_NAMES < <(gh api repos/${{ github.repository }}/milestones \
           -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
@@ -92,6 +104,7 @@ jobs:
             fi
           done
           echo "MILESTONE_NUMBER="${MILESTONE_NUMBERS[$INDEX]} >> $GITHUB_ENV
+          echo "::set-output name=milestone-number::${{ env.MILESTONE_NUMBER }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -99,10 +112,10 @@ jobs:
     needs: get-environment-variables
     uses: ./.github/workflows/next-release-init-pr.yml
     with:
-      release-version: "${{ env.RELEASE_VERSION }}"
-      new-release-version: "${{ env.NEW_RELEASE_VERSION }}"
-      minor-version: "${{ env.MINOR_VERSION }}"
-      milestone-number: ${{ env.MILESTONE_NUMBER }}
+      release-version: ${{ needs.get-environment-variables.outputs.release-version }}
+      new-release-version: ${{ needs.get-environment-variables.outputs.new-release-version }}
+      minor-version: ${{ needs.get-environment-variables.outputs.minor-version }}
+      milestone-number: ${{ needs.get-environment-variables.outputs.milestone-number }}
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -110,9 +123,9 @@ jobs:
     needs: get-environment-variables
     uses: ./.github/workflows/next-release-final-pr.yml
     with:
-      release-version: "${{ env.RELEASE_VERSION }}"
-      new-release-version: "${{ env.NEW_RELEASE_VERSION }}"
-      minor-version: "${{ env.MINOR_VERSION }}"
-      milestone-number: ${{ env.MILESTONE_NUMBER }}
+      release-version: ${{ needs.get-environment-variables.outputs.release-version }}
+      new-release-version: ${{ needs.get-environment-variables.outputs.new-release-version }}
+      minor-version: ${{ needs.get-environment-variables.outputs.minor-version }}
+      milestone-number: ${{ needs.get-environment-variables.outputs.milestone-number }}
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
