--- a/.github/workflows/next-release-final-pr.yml
+++ b/.github/workflows/next-release-final-pr.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ inputs.token }}
+          token: ${{ secrets.token }}
 
       - name: "Make changes necessary for publishing ${{ inputs.new-release-version }} in advance"
         run: |
@@ -45,7 +45,7 @@ jobs:
       - name: "Create PR containing changes necessary for publishing ${{ inputs.new-release-version }}"
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ inputs.token }}
+          token: ${{ secrets.token }}
           branch: "${{ inputs.new-release-version }}-final"
           delete-branch: true
           commit-message: "final changes before publishing ${{ inputs.new-release-version }}"
