--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -10,10 +10,10 @@ on:
 jobs:
   get-environment-variables:
     outputs:
-      release-version: ${{ steps.release-version-step.outputs.release-version }}
-      new-release-version: ${{ steps.other-versions-step.outputs.new-release-version }}
-      minor-version: ${{ steps.other-versions-step.outputs.minor-version }}
-      milestone-number: ${{ steps.milestone-number-step.outputs.milestone-number }}
+      release-version: ${{ steps.job-outputs-step.outputs.release-version }}
+      new-release-version: ${{ steps.job-outputs-step.outputs.new-release-version }}
+      minor-version: ${{ steps.job-outputs-step.outputs.minor-version }}
+      milestone-number: ${{ steps.job-outputs-step.outputs.milestone-number }}
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -21,15 +21,12 @@ jobs:
 
     steps:
       - name: Get most recent release version
-        id: release-version-step
         run: |
           echo "RELEASE_VERSION=$(gh api repos/${{ github.repository }}/tags --jq '.[0] | .name')" >> $GITHUB_ENV
-          echo "::set-output name=release-version::"${{ env.RELEASE_VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Increment minor version
-        id: other-versions-step
         run: |
           IFS='.' read -ra arr <<< ${{ env.RELEASE_VERSION }}
           MINOR_VERSION=$((${arr[1]}+1))
@@ -37,10 +34,7 @@ jobs:
           NEW_RELEASE_VERSION="${arr[0]}.${arr[1]}.${arr[2]}"
           echo "MINOR_VERSION="$MINOR_VERSION >> $GITHUB_ENV
           echo "NEW_RELEASE_VERSION="$NEW_RELEASE_VERSION >> $GITHUB_ENV
-          echo "::set-output name=minor-version::${{ env.MINOR_VERSION }}"
-          echo "::set-output name=new-release-version::${{ env.NEW_RELEASE_VERSION }}"
-
-
+          
       - name: "Check for existing ${{ env.NEW_RELEASE_VERSION }} draft release"
         run: |
           RELEASES=$(gh api repos/${{ github.repository }}/releases \
@@ -84,7 +78,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Get milestone number for ${{ env.NEW_RELEASE_VERSION }}"
-        id: milestone-number-step
         run: |
           mapfile -t MILESTONE_NAMES < <(gh api repos/${{ github.repository }}/milestones \
           -H "Authorize: token ${{ secrets.GITHUB_TOKEN }}" \
@@ -104,9 +97,20 @@ jobs:
             fi
           done
           echo "MILESTONE_NUMBER="${MILESTONE_NUMBERS[$INDEX]} >> $GITHUB_ENV
-          echo "::set-output name=milestone-number::${{ env.MILESTONE_NUMBER }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get job outputs
+        id: job-outputs-step
+        run: |
+          echo "::set-output name=release-version::${{ env.RELEASE_VERSION }}"
+          echo "::set-output name=minor-version::${{ env.MINOR_VERSION }}"
+          echo "::set-output name=new-release-version::${{ env.NEW_RELEASE_VERSION }}"
+          echo "::set-output name=milestone-number::${{ env.MILESTONE_NUMBER }}"
+
+
+
+
 
   make-next-version-init-pr:
     needs: get-environment-variables
