specify base for next-release-init-r

--- a/.github/workflows/next-release-init-pr.yml
+++ b/.github/workflows/next-release-init-pr.yml
@@ -41,6 +41,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.token }}
+          base: master
           branch: "${{ inputs.new-release-version }}-init"
           delete-branch: true
           commit-message: "inital changes for ${{ inputs.new-release-version }}"
