--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pyne>=0.5.11
+  - pyne>=0.5.11=nomoab_noopenmc*
   - numpy>=1.14.0
   - pytables
   - networkx
