--- a/.github/workflows/cache-dependencies.yml
+++ b/.github/workflows/cache-dependencies.yml
@@ -17,6 +17,15 @@ jobs:
       run:
         shell: bash -l {0}
 
+    env:
+      MPI: no
+      OMP: no
+      PHDF5: no
+      DAGMC: no
+      EVENT: no
+      VECTFIT: no
+      LIBMESH: no
+
     steps:
       - uses: actions/checkout@v2
 
@@ -42,6 +51,8 @@ jobs:
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
+            /usr/local/bin/openmc
+            ~/endfb71
             ~/.cache/pip
           key: depcache-${{ hashFiles('environment.yml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
 
@@ -50,11 +61,38 @@ jobs:
         run: mamba env update -n saltproc-env -f environment.yml
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
 
+      - name: Install OpenMC cross section library
+        if: steps.dependencies-cache.outputs.cache-hit != 'true'
+        run: |
+          scripts/ci/openmc-xs.bash
+          echo "OPENMC_CROSS_SECTIONS=$HOME/endfb71_hdf5/cross_sections.xml" >> $GITHUB_ENV
+      
+     - name: OpenMC dependencies
+       run: |
+          sudo apt -y update
+          sudo apt install -y libhdf5-dev
+          pip install --upgrade-strategy only-if-needed --no-binary=h5py h5py
+
+      - name: Download OpenMC
+        run: |
+          git clone git@github.com:openmc-dev/openmc
+
+      - name: Build OpenMC
+        if: steps.dependencies-cache.outputs.cache-hit != 'true'
+        run: python openmc/tools/ci/gha-install.py
+
+      - name: install openmc
+        run: |
+          cd openmc
+          pip install .
+          cd ../
+
       - name: Install SaltProc
         run: pip install .
 
       - name: Check packages
         run: conda list
+
   cache-doc-dependencies:
     runs-on: ubuntu-latest
     defaults:
