--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -68,7 +68,8 @@ jobs:
 
       - name: Install OpenMC cross section library
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
-        run: scripts/ci/openmc-xs.bash
+        shell: bash
+        run: $GITHUB_WORKSPACE/scripts/ci/openmc-xs.bash
       
       - name: OpenMC dependencies
         run: |
