--- a/.github/workflows/test-download-openmc.yml
+++ b/.github/workflows/test-download-openmc.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build OpenMC
         run: |
-          wget -O - https://codeload.github.com/openmc-dev/openmc/tar.gz/refs/tags/v${{ env.OPENMC_VERSION }} | tar -C $HOME/openmc -xz
+          wget -O - https://codeload.github.com/openmc-dev/openmc/tar.gz/refs/tags/v${{ env.OPENMC_VERSION }} | tar -C $HOME -xz
           CURRENT=$GITHUB_WORKSPACE
-          cd $HOME/openmc
+          cd $HOME/openmc-${{ env.OPENMC_VERSION }}
           cd $CURRENT
