--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Build OpenMC
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
         run: |
-          wget -O - https://codeload.github.com/openmc-dev/openmc/tar.gz/refs/tags/v${{ env.OPENMC_VERSION }} | tar -C $HOME -xz
+          wget -O - https://codeload.github.com/openmc-dev/openmc/tar.gz/refs/tags/v${{ env.OPENMC_VERSION }} | tar -C $HOME -xz --exclude=".github/"
           git clone git@github.com:openmc-dev/openmc $HOME/openmc
           CURRENT=$GITHUB_WORKSPACE
           cd $HOME/openmc-${{ env.OPENMC_VERSION }}
