--- a/.github/workflows/test-openmc-clone.yml
+++ b/.github/workflows/test-openmc-clone.yml
@@ -37,3 +37,11 @@ jobs:
         with:
           repository: openmc-dev/openmc
           path: openmc
+
+      - name: explore directories
+        run: |
+          ls
+          cd openmc
+          ls
+          cd ../
+
