--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -34,7 +34,7 @@ jobs:
       OPENMC_VERSION: '0.13.0'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
 # Setup conda 
       - name: Set up conda
@@ -77,15 +77,20 @@ jobs:
           sudo apt install -y libhdf5-dev
           pip install --upgrade-strategy only-if-needed --no-binary=h5py h5py
 
+      - name: Download OpenMC
+        if: steps.dependencies-cache.outputs.cache-hit != 'true'
+        uses: actions/checkout@v3
+        with: 
+          repository: openmc-dev/openmc
+          path: openmc
+
       - name: Build OpenMC
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
         run: |
-          wget -O - https://codeload.github.com/openmc-dev/openmc/tar.gz/refs/tags/v${{ env.OPENMC_VERSION }} | tar -C $HOME -xz
-          CURRENT=$GITHUB_WORKSPACE
-          cd $HOME/openmc-${{ env.OPENMC_VERSION }}
+          cd openmc
           python tools/ci/gha-install.py
           pip install .
-          cd $CURRENT
+          cd ../
 
       - name: Install SaltProc
         run:  pip install .
