add a step to pip install openmc and h5py when cache is hit

--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -90,6 +90,14 @@ jobs:
           python tools/ci/gha-install.py
           pip install .
           cd ../
+          
+      - name: Build OpenMC
+        if: steps.dependencies-cache.outputs.cache-hit == 'true'
+        run: |
+          cd openmc
+          pip install --upgrade-strategy only-if-needed --no-binary=h5py h5py
+          pip install .
+          cd ../
 
       - name: Install SaltProc
         run:  pip install .
