add line to run openmc tests

--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -90,6 +90,7 @@ jobs:
           python tools/ci/gha-install.py
           mv build $HOME/build
           pip install .
+          pytest openmc
           cd ../
           
       - name: Build OpenMC from cached CMake files
